--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.8.0",
