--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
-  "homepage": "https://blueputty01.github.io/to-do"
+  "homepage": "https://blueputty01.github.io/notes-app-practice"
 }
